--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,13 @@
         }
     },
     "require": {
-        "php": ">=5.6"
+        "php": ">=5.6",
+        "symfony/finder": "^3.0"
     },
     "config" : {
         "bin-dir" : "bin/"
-    }
+    },
+    "bin": [
+        "bin/phulp"
+    ]
 }
