--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,18 @@
     ],
     "autoload" : {
         "psr-4" : {
-            "Phulp\\" : "src"
+            "Phulp\\" : "src",
+            "Test\\" : "test"
         }
     },
     "require": {
         "php": ">=5.6",
         "symfony/finder": "^3.0"
+    },
+    "require-dev" : {
+        "phing/phing": "2.*",
+        "phpunit/phpunit": "4.5.*",
+        "squizlabs/php_codesniffer": "2.0.*@dev"
     },
     "config" : {
         "bin-dir" : "bin/"
