--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,31 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
-
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.1/phpunit.xsd"
-         backupGlobals="false"
-         colors="true"
-         convertErrorsToExceptions="true"
-         convertNoticesToExceptions="true"
-         convertWarningsToExceptions="true"
-         syntaxCheck="true"
-         stopOnFailure="false"
-         bootstrap="vendor/autoload.php">
+<phpunit
+        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.5/phpunit.xsd"
+        backupGlobals="false"
+        backupStaticAttributes="false"
+        bootstrap="vendor/autoload.php"
+        colors="true"
+        convertErrorsToExceptions="true"
+        convertNoticesToExceptions="true"
+        convertWarningsToExceptions="true"
+        processIsolation="false"
+        stopOnFailure="false">
     <testsuites>
-        <testsuite name="Test Suite">
-            <directory>test/</directory>
+        <testsuite name="Unit Tests">
+            <directory suffix="Test.php">test/Unit</directory>
+        </testsuite>
+        <testsuite name="Integration Tests">
+            <directory suffix="Test.php">test/Integration</directory>
         </testsuite>
     </testsuites>
     <filter>
         <whitelist addUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">src</directory>
-            <exclude>
-                <directory suffix="Interface.php">src</directory>
-                <directory suffix="Aware.php">src</directory>
-                <directory suffix="Trait.php">src</directory>
-            </exclude>
         </whitelist>
-        <blacklist>
-            <directory>vendor</directory>
-        </blacklist>
     </filter>
 </phpunit>
