--- a/.gitattributes
+++ b/.gitattributes
@@ -5,7 +5,7 @@
 /.gitattributes export-ignore
 /.gitignore export-ignore
 /.travis.yml export-ignore
-/build.xml export-ignore
+/build.xml.dist export-ignore
 /phpunit.xml.dist export-ignore
 /CHANGELOG.md export-ignore
 /LICENSE export-ignore
