--- a/.gitattributes
+++ b/.gitattributes
@@ -1,12 +1,13 @@
 * text=auto
 
-/bin/.gitkeep export-ignore
-/test export-ignore
-/.gitattributes export-ignore
-/.gitignore export-ignore
-/.travis.yml export-ignore
-/build.xml.dist export-ignore
-/phpunit.xml.dist export-ignore
-/CHANGELOG.md export-ignore
-/LICENSE export-ignore
-/README.md export-ignore
+.gitattributes export-ignore
+.gitignore export-ignore
+.travis.yml export-ignore
+bin/.gitkeep export-ignore
+build.xml.dist export-ignore
+CHANGELOG.md export-ignore
+DOCUMENTATION.md export-ignore
+LICENSE export-ignore
+phpunit.xml.dist export-ignore
+README.md export-ignore
+test/ export-ignore
