--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
   "require": {
     "php": ">=5.6",
     "symfony/finder": "^3.0",
-    "react/event-loop": "~0.4"
+    "react/event-loop": "~0.4",
+    "doctrine/collections": "^1.3"
   },
   "require-dev": {
     "brain/monkey": "~1.0",
