--- a/composer.json
+++ b/composer.json
@@ -26,10 +26,8 @@
     "doctrine/collections": "^1.3"
   },
   "require-dev": {
-    "brain/monkey": "~1.0",
-    "mockery/mockery": "0.9.*",
     "phing/phing": "2.*",
-    "phpunit/phpunit": "5.3.*",
+    "phpunit/phpunit": "~5.4",
     "squizlabs/php_codesniffer": "2.0.*@dev"
   },
   "autoload": {
