fixing composer json

--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "php"
   ],
   "license": "MIT",
-  "homepage": "https://reisraff.github.io/phulp/dist/#!/home",
+  "homepage": "https://reisraff.github.io/phulp/#!/home",
   "authors": [
     {
       "name": "Rafael Reis",
