--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     "php": ">=5.6",
     "symfony/finder": "^3.0",
     "react/event-loop": "~0.4",
-    "doctrine/collections": "^1.3"
+    "doctrine/collections": "^1.3",
+    "react/child-process": "^0.4.3"
   },
   "require-dev": {
     "phing/phing": "2.*",
