--- a/build.xml.dist
+++ b/build.xml.dist
@@ -34,6 +34,7 @@
 
     <target name="phpcs" description="Coding Standards Analysis">
         <exec passthru="true" command="${bindir}/phpcs --standard=PSR2 ${source}" checkreturn="true" />
+        <exec passthru="true" command="${bindir}/phpcs --standard=PSR2 ${bindir}/phulp.php" checkreturn="true" />
         <exec passthru="true" command="${bindir}/phpcs --standard=PSR2 ${test}" checkreturn="true" />
     </target>
 </project>
