--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: php
 php:
   - 5.6
   - 7.0
+  - 7.1
+  - 7.2
   - hhvm
 
 before_install:
@@ -12,7 +14,7 @@ install:
   - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-  - bin/phing
+  - bin/phulp test
 
 matrix:
   allow_failures:
