--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
   },
   "require": {
     "php": ">=5.6",
-    "symfony/finder": "^3.0",
+    "symfony/finder": "^3.0||^4.0",
     "react/event-loop": "~0.4",
     "doctrine/collections": "1.4 || ^1.3",
     "react/child-process": "^0.4.3"
