--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ php:
   - hhvm
 
 before_install:
-  - apt-get update && apt-get install findutils
+  - sudo apt-get update && sudo apt-get install findutils
   - travis_retry composer self-update
 
 install:
