--- a/composer.json
+++ b/composer.json
@@ -29,14 +29,12 @@
   },
   "require": {
     "php": ">=5.6",
-    "symfony/finder": "^3.0||^4.0",
     "react/event-loop": "~0.4",
-    "doctrine/collections": "1.4 || ^1.3",
     "react/child-process": "^0.4.3"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.4",
-    "squizlabs/php_codesniffer": "2.0.*@dev"
+    "phpunit/phpunit": "^5.7",
+    "squizlabs/php_codesniffer": "^3.4"
   },
   "autoload": {
     "psr-4": {
